--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
+language: ruby
+script: bundle exec rake
 rvm:
   - 1.8.7
-  - 1.9.1
-  - 1.9.2
+  - 1.9.3
   - ruby-head
   - ree
-  - rbx
-  - jruby
+  - rbx-18mode
+  - rbx-19mode
+  - jruby-18mode
+  - jruby-19mode
+  - jruby-head
+matrix:
+  allow_failures:
+    - rvm: jruby-head
+    - rvm: ruby-head
